found bugs in feels.js and index.hb

--- a/views/partials/feels/feel-block.handlebars
+++ b/views/partials/feels/feel-block.handlebars
@@ -1,8 +1,9 @@
 <br>
 <li>
 	{{name}}
+
+	<button class="change-down" data-id="{{id}}" data-newdown="{{down}}">
+		{{#if down}}Eat Your Feeling!{{else}}Face Your Problems!{{/if}}
+	</button>
 </li>
-<button class="change-sleep" data-id="{{id}}" data-newsleep="{{sleep}}">
-	{{#if sleep}}Eat Your Feeling!{{else}}Face Your Problems!{{/if}}
-</button>
 <br>
