--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,13 +1,13 @@
-    <h1 id="title">Eat Your Feels!</h1>
+<h1 id="title">Eat Your Feels!</h1>
 <div class="container-fluid" id="big-box">
   <div class="row align-row">
     <div class="container-fluid md-4 sm-12" id="box" id="up">
       <h4>Your Feels!</h4>
       <ul>
-        {{#each cats}}
-          {{#unless sleepy}}
-            {{> cats/cat-block sleep=true}}
-          {{/unless}}
+        {{#each feels}}
+        {{#unless downs}}
+        {{> feels/feel-block down=true}}
+        {{/unless}}
         {{/each}}
       </ul>
     </div>
@@ -17,25 +17,26 @@
       <form class="create-form">
         <div class="form-group">
           <label for="ca">What are you feeling?:</label>
-          <input type="text" id="ca" name="name">
+          <input type="text" id="fe" name="name">
         </div>
+
         <div class="form-group">
-          <label for="sleepy">How to Deal?</label><br>
-          <input type="radio" name="sleepy" value="1" checked> Personal Growth!<br>
-          <input type="radio" name="sleepy" value="0"> Swallow Emotion
+          <label for="downs">Are you ready to deal with this problem or cast it into a lake of procrastination?</label><br>
+          <input type="radio" name="downs" value="1" checked>Postpone Development<br>
+          <input type="radio" name="downs" value="0">Attempt Personal Growth
         </div>
-        <button type="submit">Add Feeling</button>
+        <button type="submit" style="align: center;">Add Feeling</button>
       </form>
     </div>
     <div class="container-fluid md-4 sm-12" id="box" id="down">
-        <h4>Feels pushed way, way down!</h4>
-        <ul>
-          {{#each cats}}
-            {{#if sleepy}}
-              {{> cats/cat-block sleep=false}}
-            {{/if}}
-          {{/each}}
-        </ul>
+      <h4>Feels pushed way, way down!</h4>
+      <ul>
+        {{#each feels}}
+        {{#if downs}}
+        {{> feels/feel-block down=false}}
+        {{/if}}
+        {{/each}}
+      </ul>
     </div>
   </div>
 </div>
