Added max height to big box

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -25,7 +25,7 @@
           <input type="radio" name="downs" value="1" checked>Postpone Development<br>
           <input type="radio" name="downs" value="0">Attempt Personal Growth
         </div>
-        <button type="submit" style="align: center;">Add Feeling</button>
+        <button type="submit" style="float:none; background-color:rgb(230, 208, 86)">Add Feel</button>
       </form>
     </div>
     <div class="container-fluid md-4 sm-12" id="box" id="down">
